@@ -168,17 +168,11 @@ void K3bProjectBurnDialog::slotStartClicked()
 {
   saveSettings();
 
-  // check if enough space in tempdir if not on-the-fly
   if( m_tempDirSelectionWidget ) {
-    if( (!doc()->onTheFly() || doc()->onlyCreateImages()) &&
-	doc()->size()/1024 > m_tempDirSelectionWidget->freeTempSpace() ) {
-      if( KMessageBox::warningContinueCancel( this, i18n("There seems to be not enough free space in temporary directory. "
-						"Write anyway?") ) == KMessageBox::Cancel )
-	return;
-    }
-
-    // check if the temp dir exists
-    if( !m_checkOnTheFly->isChecked() || m_checkOnlyCreateImage->isChecked() ) {
+    if( !doc()->onTheFly() || doc()->onlyCreateImages() ) {
+      //
+      // check if the temp dir exists
+      //
       QString tempDir = m_tempDirSelectionWidget->tempDirectory();
       if( !QFile::exists( tempDir ) ) {
 	if( KMessageBox::warningYesNo( this, i18n("Image folder '%1' does not exist. Do you want K3b to create it?").arg( tempDir ) )
@@ -189,6 +183,15 @@ void K3bProjectBurnDialog::slotStartClicked()
 	  }
 	}
 	else
+	  return;
+      }
+
+      //    
+      // check if enough space in tempdir if not on-the-fly
+      //
+      if( doc()->size()/1024 > m_tempDirSelectionWidget->freeTempSpace() ) {
+	if( KMessageBox::warningContinueCancel( this, i18n("There seems to be not enough free space in temporary directory. "
+							   "Write anyway?") ) == KMessageBox::Cancel )
 	  return;
       }
     }
